# methtools

./: .gitignore  README.md  pyproject.toml  requirements.txt
methtools/: cli.py
methtools/mhb/: api.py  parallel_processor.py  workflows.py
methtools/readmeth/: read_meth.py
methtools/snpsplit/: snp_split.py
methtools/utils/: logconfig.py  logging.py  meth_stats.py  system.py
